log
Sun, May 18, 2025 12:38:39 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025 12:39:07 AM: 
 tests:  1|4
total_score: 10/70
9a4b1e5
Sun, May 18, 2025 12:53:31 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: warning: variable 'numVisto' set but not used [-Wunused-but-set-variable]
   50 |     int numVisto[10];
      |         ^~~~~~~~
sudoku.c:55:23: error: 'i' undeclared (first use in this function)
   55 |     int num = n->sudo[i][k];
      |                       ^
sudoku.c:55:23: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:10: error: 'numVisto' undeclared (first use in this function)
   57 |       if(numVisto[num] == 1){
      |          ^~~~~~~~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
43eb412
Sun, May 18, 2025 12:57:13 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: warning: 'main' is normally a non-static function [-Wmain]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:264: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:245:5: warning: 'main' defined but not used [-Wunused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: warning: '_strdup' defined but not used [-Wunused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
11f7c1c
Sun, May 18, 2025 12:57:50 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:92:5: warning: 'main' is normally a non-static function [-Wmain]
   92 | int main( int argc, char *argv[] ){
      |     ^~~~
test.c:245:5: warning: 'main' is normally a non-static function [-Wmain]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:245:5: error: redefinition of 'main'
sudoku.c:92:5: note: previous definition of 'main' with type 'int(int,  char **)'
   92 | int main( int argc, char *argv[] ){
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:264: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:245:5: warning: 'main' defined but not used [-Wunused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: warning: '_strdup' defined but not used [-Wunused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c:92:5: warning: 'main' defined but not used [-Wunused-function]
   92 | int main( int argc, char *argv[] ){
      |     ^~~~
4588985
Sun, May 18, 2025 12:58:42 AM: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
Compilation failed
test.c: In function 'is_valid':
test.c:245:5: warning: 'main' is normally a non-static function [-Wmain]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:264: warning: control reaches end of non-void function [-Wreturn-type]
test.c: At top level:
test.c:245:5: warning: 'main' defined but not used [-Wunused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: warning: '_strdup' defined but not used [-Wunused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
7bc2305
Sun, May 18, 2025 12:59:40 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
abfa816
Sun, May 18, 2025  1:06:33 AM: 
 sudoku.c | 28 ++++++++++++++++++++++++----
 1 file changed, 24 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 30/70
acc3f52
Sun, May 18, 2025 10:43:21 AM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|3
total_score: 30/70
40db0aa
Sun, May 18, 2025 10:43:59 AM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|3
total_score: 30/70
5ba24e4
Sun, May 18, 2025 10:47:25 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
5d7dc60
Sun, May 18, 2025 10:49:46 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:83:7: error: 'k' undeclared (first use in this function)
   83 |   for(k = 0; k < 9; k++){
      |       ^
sudoku.c:83:7: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
eba3dff
